--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -9,7 +9,7 @@
   <div class="flex">
     <div class="card">
       <div class="video">
-        <video autoplay loop src="assets/video/admin.mp4"></video>
+        <video autoplay muted loop src="assets/video/admin.mp4"></video>
       </div>
       <div class="content">
         <h2>Адміністративна панель:</h2>
@@ -33,7 +33,7 @@
     </div>
     <div class="card">
       <div class="video">
-        <video autoplay loop src="assets/video/user.mp4"></video>
+        <video autoplay loop muted src="assets/video/user.mp4"></video>
       </div>
       <div class="content ">
         <h2>Користувацький інтерфейс:</h2>
